<resources>
    <string name="app_name">TRABAJO_UNIDAD_2</string>
    <string name="contra">Contraseña:</string>
    <string name="user">Usuario:</string>
    <string name="logo">logo</string>
    <string name="login">Iniciar sesión</string>
    <string name="password">Contraseña:</string>
    <string name="user2">Usuario</string>
    <string name="numCuenta">Numero de cuenta:</string>
    <string name="Clave">Contraseña:</string>
    <string name="empleado">Empleado</string>
    <string name="cerrarsesion">imagenCerrarSesion</string>
    <string name="movimiento">MOVIMIENTO:</string>
    <string name="cuentaNo">Cuenta No.</string>
    <string name="montoActual">Monto actual: S/.</string>
    <string name="digiteMonto">Digite el monto:</string>
    <string name="continuar">Continuar</string>
    <string name="cancelar">Cancelar</string>
    <string name="numeroCuenta">Numero de cuenta:</string>
    <string name="consultar">Consultar</string>
    <string name="cuentanO">Cuenta No.</string>
    <string name="saldoStr">Saldo: S/.</string>
    <string name="datosCliente">DATOS DEL CLIENTE</string>
    <string name="nombresStr">Nombres:</string>
    <string name="apelldosStr">Apellidos:</string>
    <string name="dniStr">DNI:</string>
    <string name="movimientos">Movimientos</string>
    <string name="regresar">Regresar</string>
    <string name="verMss">Ver mas...</string>
    <string name="infoCliente">INFORMACION DEL CLIENTE</string>
    <string name="strdni">DNI:</string>
    <string name="nombreStr">Nombre:</string>
    <string name="paternoStr">Paterno:</string>
    <string name="maternoStr">Materno:</string>
    <string name="codigoStr">Codigo:</string>
    <string name="ciudadStr">Ciudad:</string>
    <string name="dirStr">Direccion:</string>
    <string name="telStr">Telefono:</string>
</resources>
